--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,8 @@ description: A new Flutter application.
 dependencies:
   flutter:
     sdk: flutter
+  cloud_firestore: ^0.7.3
+  firebase_auth: ^0.5.19
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
